--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -65,7 +65,7 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 In figure \ref{fig:q1_1} can be seen the $100$ data points drawn from
 the gaussian distribution with $\mu = [1.0~ 1.0]$ and $\Sigma = [0.3~
   0.2; 0.2~ 0.2]$. The correct $\mu$ is blue and $\widehat{\mu}$ is
-marked with red. The code can be seen in \ref{text:Code}
+marked with red.
 
 \begin{figure}[!htpb]
   \centering
@@ -368,12 +368,6 @@ We can thus conclude that the method, while successful on some images, can not g
   \caption{The same data as in figure \ref{fig:q1_9}, but with the image "kande2.JPG".}
   \label{fig:q1_10}
 \end{figure}
-
-
-\newpage
-\subsection*{\label{text:Code}}
-\lstinputlisting{../src/probability_and_parameter_estimation.m}
-\lstinputlisting{../src/code/case18.m}
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Formal stuff
