--- a/week1/report/report.tex
+++ b/week1/report/report.tex
@@ -123,35 +123,35 @@ numbers.
   \centering
   \includegraphics[width=0.6\textwidth]{images/q1_4_100}
   \caption{Shows 3d histogram of 100 datapoints using $10$x$10$ bins}
-  \label{fig:q4_4_100}
+  \label{fig:q1_4_100}
 \end{figure}
 
 \begin{figure}[!htpb]
   \centering
   \includegraphics[width=0.6\textwidth]{images/q1_4_1000}
   \caption{Shows 3d histogram of 1000 datapoints using $10$x$10$ bins}
-  \label{fig:q4_4_1000}
+  \label{fig:q1_4_1000}
 \end{figure}
 
 \begin{figure}[!htpb]
   \centering
   \includegraphics[width=0.6\textwidth]{images/q1_4_10000}
   \caption{Shows 3d histogram of 10000 datapoints using $10$x$10$ bins}
-  \label{fig:q4_4_10000}
+  \label{fig:q1_4_10000}
 \end{figure}
 
 \begin{figure}[!htpb]
   \centering
   \includegraphics[width=0.6\textwidth]{images/q1_4_10000_b15}
   \caption{Shows 3d histogram of 10000 datapoints using $15$x$15$ bins}
-  \label{fig:q4_4_10000_b15}
+  \label{fig:q1_4_10000_b15}
 \end{figure}
 
 \begin{figure}[!htpb]
   \centering
   \includegraphics[width=0.6\textwidth]{images/q1_4_10000_b20}
   \caption{Shows 3d histogram of 10000 datapoints using $20$x$20$ bins}
-  \label{fig:q4_4_10000_b20}
+  \label{fig:q1_4_10000_b20}
 \end{figure}
 
 \subsection*{Question 1.5}
@@ -216,7 +216,7 @@ more samples, decreases the distance between the points.
 \end{figure}
 
 From figure \ref{fig:q1_7a} is can be seen that at first the samples
-are dependant on each other but as the random walk progresses they
+are dependent on each other but as the random walk progresses they
 become more and more independent. And when reaching lag $50$ they are
 nearly independent. From figure \ref{fig:q1_7b} the result of the
 accepted samples from the random walk can be seen.
