--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -14,6 +14,7 @@
 \usepackage{listings}
 \usepackage{graphicx}
 \usepackage{multirow}
+\usepackage{multicol}
 \usepackage{hyperref}
 \usepackage{float}
 \usepackage[small,bf]{caption}
@@ -60,11 +61,11 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 \begin{document}
 \maketitle
 
-\subsection*{Question 2.1}
 \input{./questions/q21.tex}
 
-\subsection*{Question 2.2}
 \input{./questions/q22.tex}
+
+\input{./questions/q210.tex}
 
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
