--- a/project2/report/questions/q210.tex
+++ b/project2/report/questions/q210.tex
@@ -108,48 +108,114 @@ towards overfitting, by having more curvatures.
       \hline
     \end{tabular}
   }
-  \caption{Show the result of running the neural network with various numbers of hidden units.}
+  \caption{Show the result of running the neural network with various
+    numbers of hidden units.}
   \label{fig:q210hidden}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{./images/q210a_Nh2}
-  \caption{}
+  \includegraphics[width=0.6\textwidth]{./images/q210a_Nh2}
+  \caption{Show neural network using $2$ hidden units, resulting in a
+    nearly linear decision boundary.}
   \label{fig:q210Nh2}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{./images/q210a_Nh260}
-  \caption{}
+  \includegraphics[width=0.6\textwidth]{./images/q210a_Nh260}
+  \caption{Show neural network using $260$ hidden units, resulting in
+    a rather complex decision boundary, but not overfitted.}
   \label{fig:q210Nh260}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=1.0\textwidth]{./images/q210a_Nh1000}
-  \caption{}
+  \includegraphics[width=0.6\textwidth]{./images/q210a_Nh1000}
+  \caption{Show neural network using $1000$ hidden units, resulting in
+    a complex decision boundary with many curvatures, this seems too
+    overfitted for the data.}
   \label{fig:q210Nh1000}
 \end{figure}
 
-In figure \ref{fig:q1_1} can be seen the $100$ data points drawn from
-the gaussian distribution with $\mu = [1.0~ 1.0]$ and $\Sigma = [0.3~
-  0.2; 0.2~ 0.2]$. The correct $\mu$ is blue and $\widehat{\mu}$ is
-marked with red.
+Our results suggests that using a neural network model with
+intermediate complexity results in the best generalization. Choosing
+$260$ hidden units performs the best.
 
-\begin{figure}[!htpb]
+We are now to experiment with using regulization to control the
+complexity of the model using a fixed number of hidden units. The
+result of the experiments can be seen in figure
+\ref{fig:q210bregulization}. The figure \ref{fig:q210breg2} show the
+plot of \ref{subfig:q210btrain}, the result suffers from overfitting
+it produces the lowest training error, but the test error suffer from
+the lack of generalization. Using $0.025119$ as regulization
+coefficient produces the most general model, this produces a near
+linear decision boundary which can be seen in \ref{fig:q210breg3}. A
+to simple model is shown in figure \ref{fig:q210breg5}, this is using
+$6.309573$ as regulization coefficient, this results in a total linear
+model due to the regulization of the weight parameters in the model. A
+graph of the error values can be seen in figure \ref{fig:q210berror}
+bottom.
+
+\begin{figure}[!htbp]
   \centering
-%  \includegraphics[width=0.6\textwidth]{images/q1_1}
-  \caption{100 data points, correct mean with blue and estimated mean red.}
-  \label{fig:q1_1}
+  \subfloat[\label{subfig:q210btrain}]{
+    \begin{tabular}{|c|c|}
+      \hline
+      \multicolumn{2}{|c|}{Regulization coefficient $= 0.001585$} \\
+      \hline
+      Training error: \textbf{26.00\%} & Test error: 29.38\% \\
+      \hline
+    \end{tabular}
+  }
+  \subfloat[\label{subfig:q210btest}]{
+  \begin{tabular}{|c|c|}
+    \hline
+      \multicolumn{2}{|c|}{Regulization coefficient $= 0.025119$} \\
+      \hline
+      Training error: 27.00\% & Test error: \textbf{28.25\%} \\
+      \hline
+    \end{tabular}
+  }
+  \caption{\ref{subfig:q210btrain} shows the best result on training
+    data, \ref{subfig:q210btest} shows the best result on test data}
+  \label{fig:q210bregulization}
 \end{figure}
 
-To quantify how much the estimated mean deviates from the correct
-mean, we use usual euclidean distance between the two vectors.
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./images/q210b_reg2}
+  \caption{Show neural network using regulization coefficient at $0.001585$, resulting in
+    a complex decision boundary, this seems to tends towards overfitted.}
+  \label{fig:q210breg2}
+\end{figure}
 
-Our distance is $0.0392$, which is not very much. This can also be
-seen from the drawing, the points are placed really close.
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./images/q210b_reg3}
+  \caption{Show neural network using regulization coefficient at $0.025119$, resulting in
+    a simple near linear decision boundary, not overfitted.}
+  \label{fig:q210breg3}
+\end{figure}
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./images/q210b_reg5}
+  \caption{Show neural network using regulization coefficient at $6.309573$, resulting in
+    a linear decision boundary.}
+  \label{fig:q210breg5}
+\end{figure}
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.8\textwidth]{./images/q210b_error}
+  \caption{Shows error of training and test data in relation to the
+    regulization coefficient. Also shows the regulized cost function
+    in relation to the regulization coefficient.}
+  \label{fig:q210berror}
+\end{figure}
+
+\newpage
 
 The covariance matrix is also calculated on the training data:\\
 $$\Sigma _{ML} = \left[
