--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -31,21 +31,9 @@
     showstringspaces=false, numbers=left, stepnumber=1, numberstyle=\tiny, frame=tb}
 
 
-%% \def\mytitle{Signal and Image Processing 2010}
-%% \def\mysubtitle{Handin of mandatory excercise 1}
-%% \def\myauthor{Ulrik Bonde}
-%% \def\mymail{\mailto{bonde@diku.dk}}
-%% \def\mydate{\today}
-
 \title{Statistical Methods for Machine Learning \\ Mandatory Project 2}
 \author{Kasper Steenstrup\\Michael Andersen\\Esben Skaarup}
 \date{\today}
-
-%% \title{\mytitle}
-%% \subtitle{\mysubtitle}
-
-%% \author{\myauthor{} - \mymail}
-%% \date{\mydate}
 
 \hypersetup{
 colorlinks,%
@@ -65,6 +53,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q22.tex}
 
+\input{./questions/q26.tex}
+
 \input{./questions/q210.tex}
 
 
@@ -76,5 +66,3 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 %\addcontentsline{toc}{chapter}{Litteratur
 
 \end{document}
-
-% vim: set tw=72 spell spelllang=en:
