Added question 2.7 to the report.

--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -55,6 +55,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q26.tex}
 
+% \input{./questions/q27.tex}
+
 \input{./questions/q210.tex}
 
 
