--- a/project2/report/questions/q21.tex
+++ b/project2/report/questions/q21.tex
@@ -1,13 +1,25 @@
-we calculate the RMS error for the to models, whits is displaste in the
-tabel togger whit the min and max over 50 calculations. In the ferste
-model the RMS error is lower than the other, the firste model min and
-max i olso closser. Baste on this fakts, we base that the firste model
-is better.
+\subsection*{Question 2.1}
 
-\begin{tabular}{ l l l }
-		& RMS		& Max		& min \\
-train1	& 4.4071	& 4.5634	& 4.2075 \\
-test1	& 4.5723	& 5.3269	& 3.9773 \\
-train2	& 4.8466	& 5.0046	& 4.5746 \\
-test2	& 4.9268	& 6.0025	& 4.2679 \\
-\end{tabular}
+We calculate the RMS error for the to models, which is displayed in
+table \ref{tab:q21} along with the min and max over 50
+calculations. In the first model the RMS error is lower than the
+other, the first model min and max is also closer. Based on this fact,
+we see that the first model is better.
+
+\begin{table}[!htbp]
+  \centering
+  \begin{tabular}{| l | l | l | l |}
+    \hline
+    {}		& RMS		& Max		& Min \\
+    \hline
+    Train1	& 4.4071	& 4.5634	& 4.2075 \\
+    \hline
+    Test1	& 4.5723	& 5.3269	& 3.9773 \\
+    \hline
+    Train2	& 4.8466	& 5.0046	& 4.5746 \\
+    \hline
+    Test2	& 4.9268	& 6.0025	& 4.2679 \\
+    \hline
+  \end{tabular}
+  \label{tab:q21}
+\end{table}
