--- a/project2/report/questions/q22.tex
+++ b/project2/report/questions/q22.tex
@@ -1,12 +1,15 @@
-I figur \ref{fig:q2} the four RMS error for \alpha in the interval from
-1 til 200 i displayet. As the figur indekeads the test data, have the
-lowest error, and the firste model have the best results. The best value
-for \alpha i one, sine the error get biggger the larger \alpha.
+\subsection*{Question 2.2}
+In figure \ref{fig:q22} the four RMS errors for $\alpha$ in the
+interval from 1--200. As the figure indicates the test data, have the
+lowest error, and the firste model have the best results, due to the
+fact that it uses more features from the dataset to train the
+model. The best value of $\alpha$ is one, since the error get bigger
+the larger $\alpha$.
 
 \begin{figure}[!htbp]
   \centering
-  \includegraphics[width=0.6\textwidth]{./images/Q2.pdf}
-  \caption{RMS for the 2 traning models and test models}
-  \label{fig:q2}
+  \includegraphics[width=0.75\textwidth]{./images/Q2.pdf}
+  \caption{RMS for the two training models and test models}
+  \label{fig:q22}
 \end{figure}
 
