added begining of question 2.8

--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -18,6 +18,8 @@
 \usepackage{hyperref}
 \usepackage{float}
 \usepackage[small,bf]{caption}
+\usepackage{synttree}
+%\usepackage{pst-node}
 %\usepackage{xypic}
 \usepackage[table]{xcolor}
 \usepackage{subfig}
@@ -56,6 +58,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 \input{./questions/q26.tex}
 
 % \input{./questions/q27.tex}
+
+\input{./questions/q28.tex}
 
 \input{./questions/q210.tex}
 
