Added 2.7 to report.tex.

--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -57,7 +57,7 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q26.tex}
 
-% \input{./questions/q27.tex}
+\input{./questions/q27.tex}
 
 \input{./questions/q28.tex}
 
