Added q23.tex to report.tex

--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -55,6 +55,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q22.tex}
 
+\input{./questions/q23.tex}
+
 \input{./questions/q26.tex}
 
 \input{./questions/q27.tex}
