Spell corrected q23.tex

--- a/project2/report/questions/q23.tex
+++ b/project2/report/questions/q23.tex
@@ -1,28 +1,29 @@
-In figue \ref{fig:q23a}, the originale prediktion treandt, $p(c|x)$ is
-displayte. In figur \ref{fig:q23b} the prediktion treands og the Bayes
-classifikation i displayt.It can be seen, that the to figurs is very
-mots allike, bot som smalle trenses have hapent.
+In figure \ref{fig:q23a}, the original prediction trend,
+$p(\mathbf{x}|\mathcal{C}_k)$ is displayed. In figure \ref{fig:q23b}
+the prediction trend and Bayes classification is displayed. It can be
+seen, that the two figures are very much alike, but some small
+differences have happened.
 
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q23a.pdf}
-  \caption{The original prediktion treandt, p(c|x)}
+  \caption{The original prediction trend, $p(\mathbf{x}|\mathcal{C}_k)$}
   \label{fig:q23a}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q23b.pdf}
-  \caption{the prediktion treands of the Bayes classifikation, $p(x|c)$}
+  \caption{The prediction trend of the Bayes classifikation, $p(\mathbf{x}|\mathcal{C}_k)$}
   \label{fig:q23b}
 \end{figure}
 
-As it can be seen, i figur \ref{fig:q23c}, chansing the prior of one of
-the classes. Makse it more or less dominent.
+As it can be seen, in figure \ref{fig:q23c}, chancing the prior of one of
+the classes. Makes it more or less dominent.
 
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q23c.pdf}
-  \caption{the prediktion treands of the Bayes classifikation, where class one, have are prior og 1.5}
+  \caption{The prediktion trend of the Bayes classification, where class one, have a prior of 1.5}
   \label{fig:q23c}
 \end{figure}
