--- a/project2/report/questions/q21.tex
+++ b/project2/report/questions/q21.tex
@@ -1,10 +1,12 @@
 \subsection*{Question 2.1}
 
-We calculate the RMS error for the to models, which is displayed in
-table \ref{tab:q21} along with the min and max over 50
-calculations. In the first model the RMS error is lower than the
-other, the first model min and max is also closer. Based on this fact,
-we see that the first model is better.
+We calculate the RMS error for the two models, this is displayed in
+table \ref{tab:q21} along with the min and max averaged over 50
+iterations. In the first model the RMS error is lower than the other,
+the first model min and max is also closer. Based on this fact, we see
+that the first model is better, this was to be expected as the first
+model is based on four features from the dataset and the second model
+is based on one features from the dataset.
 
 \begin{table}[!htbp]
   \centering
@@ -21,5 +23,8 @@ we see that the first model is better.
     Test2	& 4.9268	& 6.0025	& 4.2679 \\
     \hline
   \end{tabular}
+  \caption{Shows the Root mean square, along with maximum and minimum.}
   \label{tab:q21}
 \end{table}
+
+\newpage
