--- a/project2/report/questions/q22.tex
+++ b/project2/report/questions/q22.tex
@@ -1,7 +1,8 @@
 \subsection*{Question 2.2}
+
 In figure \ref{fig:q22} the four RMS errors for $\alpha$ in the
 interval from 1--200. As the figure indicates the test data, have the
-lowest error, and the firste model have the best results, due to the
+lowest error, and the first model have the best results, due to the
 fact that it uses more features from the dataset to train the
 model. The best value of $\alpha$ is one, since the error get bigger
 the larger $\alpha$.
@@ -13,3 +14,4 @@ the larger $\alpha$.
   \label{fig:q22}
 \end{figure}
 
+\newpage
