--- a/project2/report/questions/q23.tex
+++ b/project2/report/questions/q23.tex
@@ -1,6 +1,8 @@
+\subsection*{Question 2.3}
+
 In figure \ref{fig:q23a}, the original prediction trend,
 $p(\mathbf{x}|\mathcal{C}_k)$ is displayed. In figure \ref{fig:q23b}
-the prediction trend and Bayes classification is displayed. It can be
+the prediction trend of Bayes classification is displayed. It can be
 seen, that the two figures are very much alike, but some small
 differences have happened.
 
@@ -24,6 +26,8 @@ the classes. Makes it more or less dominent.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q23c.pdf}
-  \caption{The prediktion trend of the Bayes classification, where class one, have a prior of 1.5}
+  \caption{The prediction trend of the Bayes classification, where class one, have a prior of 1.5}
   \label{fig:q23c}
 \end{figure}
+
+\newpage
