--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -63,6 +63,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q28.tex}
 
+\input{./questions/q29.tex}
+
 \input{./questions/q210.tex}
 
 
