--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -57,6 +57,10 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q23.tex}
 
+\input{./questions/q24.tex}
+
+\input{./questions/q25.tex}
+
 \input{./questions/q26.tex}
 
 \input{./questions/q27.tex}
