opgave 4 don, men ret den

--- a/project2/report/questions/q24.tex
+++ b/project2/report/questions/q24.tex
@@ -1,3 +1,11 @@
+For the shart covariances of the maximum liklighod problem, gives are
+liner classifikations, as it can be seen in figur \ref{fig:q24a}. for
+the not shart covariances, the classifikation is non liner, ant it
+splits op in are split green class, as it can be seen in figur
+\ref{fig:q24b}, this cut be are case of overfitting. In comperisen to
+the optimal decision regions, figur \ref{fig:q24a} compers best and is
+the classifikation model that fits best.
+
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q24a.pdf}
