--- a/project2/report/questions/q28.tex
+++ b/project2/report/questions/q28.tex
@@ -1,5 +1,5 @@
 \subsection*{Question 2.8}
-
+\subsubsection*{1)}
 Below in figure \ref{fig:q28decisiontree} can be seen the decision
 tree for the situation.
 
@@ -11,3 +11,21 @@ tree for the situation.
   \caption{}
   \label{fig:q28decisiontree}
 \end{figure}
+
+\subsubsection*{2)}
+The operation should be prefered if $U(3) < 0.7$, this is because in
+order to obtain $U(12) = 1.0$, we need to have the operation. And as
+there is $p(survive operation) = 0.7$, this results in $1.0 * 0.7 =
+0.7$. Whereas the contrary $p(not survive operation) = 1 - p(survive
+operation) = 1 - 0.7 = 0.3$, with $U(0) = 0.0$ we get $0.3 * 0.0 =
+0.0$
+
+\subsubsection*{3)}
+We are to explain the calculations. It is simply a using Bayes theorem
+to derive the posterior probability $p(\textrm{survive}|\textrm{pos})$
+of the patient surviving given that the test was positive.
+
+\subsubsection*{4)}
+Yes, Dr. No should perform the operation, the chances of survival are
+as given by the posterior probability in $3)$. Although there are
+always a chance that it will fail and the patient will die.
