Added something to question 2.11.

--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -67,6 +67,8 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q210.tex}
 
+\input{./questions/q211.tex}
+
 
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
 % Formal stuff
