--- a/project2/report/questions/q211.tex
+++ b/project2/report/questions/q211.tex
@@ -1,6 +1,8 @@
 \subsection*{Question 2.11}
 
-As seen in figure \ref{fig:q211.1} through \ref{fig:q211.3}, the penalization parameter controls how much the green points are weighed compared to the blue ones.
+As seen in figure \ref{fig:q211.1} through \ref{fig:q211.3}, the
+penalization parameter controls how much the green points are weighed
+compared to the blue ones.
 
 \begin{figure}[!htbp]
   \centering
@@ -21,8 +23,10 @@ As seen in figure \ref{fig:q211.1} through \ref{fig:q211.3}, the penalization pa
   \label{fig:q211.3}
 \end{figure}
 
-The general trend of the error as a function of the penalization parameter can be seen in figure \ref{fig:q211.4}.
-When variating the length scale of the kernel function, the error variates as seen in figure \ref{fig:q211.5}.
+The general trend of the error as a function of the penalization
+parameter can be seen in figure \ref{fig:q211.4}.  When variating the
+length scale of the kernel function, the error variates as seen in
+figure \ref{fig:q211.5}.
 
 \begin{figure}[!htbp]
   \centering
