--- a/project2/report/report.tex
+++ b/project2/report/report.tex
@@ -53,24 +53,26 @@ pdfauthor={Kasper Steenstrup, Michael Andersen \& Esben Skaarup}
 
 \input{./questions/q21.tex}
 
+\newpage
 \input{./questions/q22.tex}
+\newpage
 
 \input{./questions/q23.tex}
-
+\newpage
 \input{./questions/q24.tex}
-
+\newpage
 \input{./questions/q25.tex}
-
+\newpage
 \input{./questions/q26.tex}
-
+\newpage
 \input{./questions/q27.tex}
-
+\newpage
 \input{./questions/q28.tex}
-
+\newpage
 \input{./questions/q29.tex}
-
+\newpage
 \input{./questions/q210.tex}
-
+\newpage
 \input{./questions/q211.tex}
 
 
