Last changes to q24 and q25

--- a/project2/report/questions/q24.tex
+++ b/project2/report/questions/q24.tex
@@ -1,3 +1,5 @@
+\subsection*{Question 2.4}
+
 For the shared covariances of the maximum likelihood problem, gives a
 linear classifications, as it can be seen in
 figure \ref{fig:q24a}. For the independent covariances, the
