--- a/project2/report/questions/q25.tex
+++ b/project2/report/questions/q25.tex
@@ -1,3 +1,5 @@
+\subsection*{Question 2.5}
+
 If we compare figure \ref{fig:q25a} and \ref{fig:q25b}, it is clear
 that the graphs are very are alike, but as can be seen in
 figure \ref{fig:q25a} using the basis function $\phi(x) =
