updated q37 and report

--- a/project3/report/questions/q37.tex
+++ b/project3/report/questions/q37.tex
@@ -33,13 +33,31 @@ starts to become one.
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.85\textwidth]{./images/q37kde}
-  \caption{Shows various histograms.}
+  \caption{Shows kernel density estimation for various selections of bandwidth.}
   \label{fig:q37kde}
 \end{figure}
 
 \begin{figure}[!htbp]
   \centering
   \includegraphics[width=0.6\textwidth]{./images/q37kdeauto}
-  \caption{Shows various histograms.}
+  \caption{Shows kernel density estimation with automatic bandwidth selection.}
   \label{fig:q37kdeauto}
 \end{figure}
+
+
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./images/q373dkde1}
+  \caption{Shows 2d kernel density estimations for various selections of bandwidth.}
+  \label{fig:q373dkde1}
+\end{figure}
+
+
+\begin{figure}[!htbp]
+  \centering
+  \includegraphics[width=0.6\textwidth]{./images/q373dkde2}
+  \caption{Shows 2d kernel density estimations for various selections of bandwidth.}
+  \label{fig:q373dkde2}
+\end{figure}
+
